package jp.ac.shibaura.it.ie.domain.model.user;

public class UserId {
  private String value;

  public UserId(String value) {
    this.value = value;
  }

  public String getValue() {
    return value;
  }
}