package jp.ac.shibaura.it.ie.domain.model.user;

public class UserName {
    private String value;

    public UserName(String value) {
        this.value = value;
    }

    public String getValue() {
        return value;
    }
}