package jp.ac.shibaura.it.ie.domain.model.user;

public class UserPassword {
  private String value;

  public UserPassword(String value) {
    this.value = value;
  }

  public String getValue() {
    return value;
  }
}