@startuml

title __USER's Class Diagram__\n

  namespace jp.ac.shibaura.it.ie {
    namespace domain.model.user {
      class jp.ac.shibaura.it.ie.domain.model.user.User {
          + User()
          + changeName()
          + getId()
          + getName()
          + getPass()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.model.user {
      class jp.ac.shibaura.it.ie.domain.model.user.UserId {
          - value : String
          + UserId()
          + getValue()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.model.user {
      class jp.ac.shibaura.it.ie.domain.model.user.UserName {
          - value : String
          + UserName()
          + getValue()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.model.user {
      class jp.ac.shibaura.it.ie.domain.model.user.UserPassword {
          - value : String
          + UserPassword()
          + getValue()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.model.user {
      interface jp.ac.shibaura.it.ie.domain.model.user.UserRepository {
          {abstract} + find()
          {abstract} + findAll()
          {abstract} + save()
          {abstract} + update()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.model.user {
      class jp.ac.shibaura.it.ie.domain.model.user.UserSession {
          - session : String
          + UserSession()
          + getId()
          + getName()
          + getSession()
      }
    }
  }
  

  jp.ac.shibaura.it.ie.domain.model.user.User o-- jp.ac.shibaura.it.ie.domain.model.user.UserId : id
  jp.ac.shibaura.it.ie.domain.model.user.User o-- jp.ac.shibaura.it.ie.domain.model.user.UserName : name
  jp.ac.shibaura.it.ie.domain.model.user.User o-- jp.ac.shibaura.it.ie.domain.model.user.UserPassword : pass
  jp.ac.shibaura.it.ie.domain.model.user.UserSession o-- jp.ac.shibaura.it.ie.domain.model.user.UserId : id
  jp.ac.shibaura.it.ie.domain.model.user.UserSession o-- jp.ac.shibaura.it.ie.domain.model.user.UserName : name


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
